# evm-indexer-api

./: .cursorignore  .gitignore  API.md  Cargo.toml  README.md
configs/: config.toml
contracts/: .env.sample  .gitignore  README.md  bun.lockb  foundry.toml  hardhat.config.ts  package.json  remappings.txt
contracts/ABI/: AlgebraTwoSideFee.json  AlgebraV3.json  CLPPool.json  IAlgebraFactory.json  IAlgebraPoolSei.json  IQuoter.json  IQuoterAlgebra.json  IQuoterAlgebraSei.json  IQuoterV2.json  ISwapRouter.json  IUniswapV2Pair.json  IUniswapV3Factory.json  IUniversalRouter.json  IVeloPoolFactory.json  IVerioIP.json
contracts/contracts/: UniversalRouter.sol  UniversalRouterCustomFee.sol
contracts/contracts/abstracts/: Execution.sol
contracts/contracts/interfaces/: IHookConfig.sol  IUniversalQuoter.sol  IWNative.sol
contracts/contracts/interfaces/UniswapV2/: IUniswapV2Callee.sol  IUniswapV2Factory.sol  IUniswapV2Pair.sol  IUniswapV2Router01.sol
contracts/contracts/interfaces/UniswapV3/: IQuoter.sol  IUniswapV3Factory.sol  (+4 more)
contracts/contracts/libraries/: Path.sol  Pool.sol  UniswapV2Library.sol  UniswapV2LibraryCustomFee.sol
contracts/script/: Base.s.sol  Constant.s.sol  Deploy.s.sol  DeployCustomFee.s.sol  DeployCustomFee2.s.sol  DeployCustomFeeRealB.s.sol  SetCallback.s.sol
contracts/test/: Constant.t.sol  IUniswapV3Pool.sol  attach.t.sol  call.t.sol  deploy.t.sol  test.sol  testCallbackV2.t.sol  testCallbackV3.t.sol  vip.t.sol
src/: lib.rs
src/api/: handlers.rs  mod.rs  models.rs
src/blockchain/: mod.rs
src/blockchain/contracts/: mod.rs
src/blockchain/providers/: event_queue.rs  mod.rs  network_configurator.rs  pool_fetcher.rs  pool_updater_latest_block.rs  pool_updater_websocket.rs  token_fetcher.rs  utils.rs  websocket_listener.rs
src/core/: mod.rs  proccessor.rs  simulator.rs
src/core/database/: mod.rs
src/core/executor/: mod.rs
src/models/: mod.rs
src/models/path/: mod.rs  registry.rs
src/models/pool/: base.rs  mock.rs  mod.rs  multichain_registry.rs  registry.rs
src/models/profit_token/: mod.rs  registry.rs
src/models/token/: mod.rs  multichain_registry.rs  registry.rs
src/utils/: config.rs  encode_packed.rs  errors.rs  logger.rs  metrics.rs  mod.rs  utils.rs
(+22 files in other folders)
