[package]
name = "evm-dex-arbitrage"
version = "0.1.0"
edition = "2021"
authors = ["Daniel"]
description = "EVM arbitrage bot for finding and executing profitable trading opportunities"

[features]
default = []
profiling = [] # Feature flag for profiling metrics

[dependencies]
# Ethereum and Web3 interactions
alloy = { version = "1.0.30", features = ["full"] }
url = "2.5.0"
uniswap_v3_math = "0.6.0"
tower = { version = "0.5", features = ["retry"] }

# Concurrency and async
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
rayon = "1.10.0"

# Logging and error handling
log = "0.4.27"
env_logger = "0.11.7"
anyhow = "1.0"
thiserror = "2.0.12"

# Configuration
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
config = "0.15.11"
dotenv = "0.15"
toml = "0.8"

# Data structures and algorithms
petgraph = "0.7.1"   # For graph operations
dashmap = "6.1.0"    # Thread-safe hashmaps
rustc-hash = "1.1.0" # Fast non-cryptographic hash for HashMaps
smallvec = "1.13.1"  # Small vector optimization

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
redis = { version = "0.29.2", features = ["tokio-comp"] }
mongodb = { version = "3.2.5" }
bson = { version = "2.8.0", features = ["chrono-0_4", "uuid-1"] }
rand = "0.9.2"
uuid = { version = "1.18.0", features = ["v4", "serde"] }

# Math and numeric operations
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.30"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4.3"

# CLI tools
clap = { version = "4.3", features = ["derive"] }
proc-macro2 = "1.0"

# Testing
mockall = "0.13.1"

# HTTP client/server
reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Added from the code block
sled = "0.34.7"
bincode = "1.3.3"
ctrlc = { version = "3.4.1", features = ["termination"] }

[lib]
name = "evm_arb_bot"
path = "src/lib.rs"

[[bin]]
name = "evm-dex-arbitrage"
path = "bin/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
